--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap" rel="stylesheet">
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     </head>
-    <body>
-        <h1>
-            Chuck Norris
-        </h1>
-        <h3>
-            JSON time
-        </h3>
+    <body id="body" class="container-fluid">
+        <div >
+            <h1 class="title">
+                Chuck Norris
+            </h1>
+            <h3>
+                JSON time
+            </h3>
+        </div>
         <div class="display">
-            <div class="loading-graphic" display="none">
+            <div class="loading-graphic">
                 loading quote...
-            </div>
-            <div id="quote">
             </div>
             <div id="categories" style="font-weight: 600;">
             </div>
+            <div id="quote">
+            </div>
         </div>
         <div class="controls">
-            <div class="input-group">
+            <div class="input-group categ-select-group">
                 <label for="categ">
                     Choose a category:
                 </label>
@@ -40,5 +44,7 @@
 
         <!-- JavaScript script -->
         <script src="main.js"></script>
+        <!-- Bootstrap script -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
